--- a/PTI/BTVN/Tuan1/tuan1_Duy_Calculator.ui
+++ b/PTI/BTVN/Tuan1/tuan1_Duy_Calculator.ui
@@ -7,11 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>440</width>
-    <height>493</height>
+    <height>505</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Calculator</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(217, 217, 217);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton">
@@ -72,7 +75,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>410</y>
+      <y>420</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -198,7 +201,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>410</y>
+      <y>420</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -216,7 +219,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>410</y>
+      <y>420</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -288,7 +291,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>410</y>
+      <y>420</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -309,7 +312,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>190</y>
+      <y>180</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -327,7 +330,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>190</y>
+      <y>180</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -345,7 +348,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>190</y>
+      <y>180</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -363,7 +366,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>190</y>
+      <y>180</y>
       <width>81</width>
       <height>41</height>
      </rect>
