--- a/PTI/SPCK/GUI/Setup1.ui
+++ b/PTI/SPCK/GUI/Setup1.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Duy's App Store Setup</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="bt_next">
@@ -101,7 +105,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Where should PC Clean be installed?</string>
+     <string>Where should Duy's App Store be installed?</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
