--- a/PTI/SPCK/GUI/Setup3.ui
+++ b/PTI/SPCK/GUI/Setup3.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Duy's App Store Setup</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label_2">
@@ -36,7 +40,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>330</y>
+      <y>340</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -85,6 +89,24 @@
     </property>
     <property name="text">
      <string>After you click &quot;Install now!&quot;, Duy's App Store application will be installed</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_repair">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>340</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Repair Tool</string>
     </property>
    </widget>
   </widget>
