--- a/PTI/SPCK/GUI/Setup4.ui
+++ b/PTI/SPCK/GUI/Setup4.ui
@@ -89,9 +89,9 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>120</x>
       <y>170</y>
-      <width>401</width>
+      <width>281</width>
       <height>16</height>
      </rect>
     </property>
@@ -101,7 +101,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Please wait while Duy's App Store is being installed</string>
+     <string>Duy's App Store has been successfully installed.</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_next">
