--- a/PTA/SPCK/gui/dangnhap.ui
+++ b/PTA/SPCK/gui/dangnhap.ui
@@ -20,7 +20,7 @@
    <number>0</number>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: #F8F2EC;</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -64,10 +64,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: #ECE3D2;
-font: 12pt &quot;Segoe UI&quot;;
-border-radius: 15px;
-padding-left: 5px;</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string/>
@@ -102,10 +99,7 @@ padding-left: 5px;</string>
      <cursorShape>IBeamCursor</cursorShape>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: #ECE3D2;
-font: 12pt &quot;Segoe UI&quot;;
-border-radius: 15px;
-padding-left: 5px;</string>
+     <string notr="true"/>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
@@ -138,21 +132,18 @@ padding-left: 5px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Bahnschrift</family>
+      <family>Tahoma</family>
       <pointsize>16</pointsize>
-      <weight>75</weight>
+      <weight>50</weight>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-radius: 15px;
-background-color: #356a9c;
-color: #F8F2EC;
-font: 600 16pt &quot;Bahnschrift&quot;
+     <string notr="true">
 </string>
     </property>
     <property name="text">
@@ -279,10 +270,7 @@ font: 600 16pt &quot;Bahnschrift&quot;
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: #ECE3D2;
-font: 12pt &quot;Segoe UI&quot;;
-border-radius: 15px;
-padding-left: 5px;</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Register</string>
