--- a/PTI/SPCK/GUI/SetupFinish.ui
+++ b/PTI/SPCK/GUI/SetupFinish.ui
@@ -70,7 +70,7 @@
      </font>
     </property>
     <property name="text">
-     <string>          The installer has finished installing Duy's App Store
+     <string>          The installer has finished installing Note for WOW!
 You can turn off your computer or remove the installer CD now!</string>
     </property>
    </widget>
