--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Note for WOW! beta 1 MainPage</string>
+   <string>Note for WOW! MainPage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -71,8 +71,8 @@
    <widget class="QPushButton" name="bt_edit1">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>470</y>
+      <x>240</x>
+      <y>450</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -89,8 +89,8 @@
    <widget class="QTextBrowser" name="textBrowser_2">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>260</y>
+      <x>500</x>
+      <y>240</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -106,8 +106,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>260</y>
+      <x>170</x>
+      <y>240</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -123,8 +123,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_edit2">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>470</y>
+      <x>560</x>
+      <y>450</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -136,6 +136,42 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>Edit this note</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_tools">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>490</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Tools</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_add">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>160</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Add more Notes</string>
     </property>
    </widget>
   </widget>
