feat SPCK Beta 2 - 30/3/2024

--- a/PTI/SPCK/GUI/Setup1.ui
+++ b/PTI/SPCK/GUI/Setup1.ui
@@ -178,7 +178,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>C:\Program Files (x86)\PC Clean App</string>
+     <string>C:\Program Files (x86)\Note for WOW App</string>
     </property>
     <property name="placeholderText">
      <string>Please select destination location!</string>
