--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>990</width>
-    <height>594</height>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,9 +39,9 @@
     <property name="geometry">
      <rect>
       <x>400</x>
-      <y>20</y>
+      <y>30</y>
       <width>91</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
@@ -68,14 +68,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Beta 1 Test Only!</string>
+     <string>Beta 2 Test Only!</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_edit1">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>450</y>
+      <x>280</x>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -92,8 +92,8 @@
    <widget class="QTextBrowser" name="textBrowser_2">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>240</y>
+      <x>540</x>
+      <y>350</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -109,8 +109,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>240</y>
+      <x>210</x>
+      <y>350</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -126,8 +126,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_edit2">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>450</y>
+      <x>600</x>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -141,11 +141,11 @@ p, li { white-space: pre-wrap; }
      <string>Edit this note</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bt_tools">
+   <widget class="QPushButton" name="bt_quit">
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>490</y>
+      <y>590</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -156,14 +156,14 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Tools</string>
+     <string>Close Application</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_add">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>160</y>
+      <x>440</x>
+      <y>280</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -175,6 +175,104 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>Add more Notes</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>120</y>
+      <width>401</width>
+      <height>121</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_apply">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>160</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Apply</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_cancel">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>200</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cancel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>130</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Title</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>180</y>
+      <width>251</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Your title name?</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>250</y>
+      <width>861</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_save">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>520</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Save change</string>
     </property>
    </widget>
   </widget>
