--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -7,22 +7,22 @@
     <x>0</x>
     <y>0</y>
     <width>1007</width>
-    <height>594</height>
+    <height>639</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Note for WOW! - Administrator tools</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(209, 209, 209);</string>
+   <string notr="true">background-color: rgb(255, 243, 207);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>20</y>
-      <width>401</width>
+      <x>50</x>
+      <y>60</y>
+      <width>291</width>
       <height>111</height>
      </rect>
     </property>
@@ -32,15 +32,15 @@
      </font>
     </property>
     <property name="text">
-     <string>         Administrator Tools
-Only for Administrator account!</string>
+     <string>         Note for WOW!
+      Administrator Tools</string>
     </property>
    </widget>
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>420</y>
+      <x>820</x>
+      <y>460</y>
       <width>20</width>
       <height>161</height>
      </rect>
@@ -53,7 +53,7 @@ Only for Administrator account!</string>
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>450</y>
+      <y>490</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -71,7 +71,7 @@ Only for Administrator account!</string>
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>520</y>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -89,11 +89,14 @@ and Exit</string>
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>190</y>
+      <x>200</x>
+      <y>290</y>
       <width>256</width>
       <height>192</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="html">
      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -103,11 +106,11 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Today is March 28....&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bt_remove1">
+   <widget class="QPushButton" name="bt_tool1">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>460</y>
+      <x>270</x>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -118,15 +121,14 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Remove from
-this list</string>
+     <string>Tools</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bt_remove2">
+   <widget class="QPushButton" name="bt_tool2">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>460</y>
+      <x>590</x>
+      <y>560</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -137,18 +139,20 @@ this list</string>
      </font>
     </property>
     <property name="text">
-     <string>Remove from
-this list</string>
+     <string>Tools</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_2">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>190</y>
+      <x>530</x>
+      <y>290</y>
       <width>256</width>
       <height>192</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="html">
      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -161,8 +165,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_edit1">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>400</y>
+      <x>270</x>
+      <y>500</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -179,8 +183,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_edit2">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>400</y>
+      <x>590</x>
+      <y>500</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -197,16 +201,176 @@ p, li { white-space: pre-wrap; }
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>410</y>
-      <width>231</width>
-      <height>16</height>
+      <x>830</x>
+      <y>450</y>
+      <width>201</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>150</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Release Version 1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>50</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Title</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>100</y>
+      <width>251</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="placeholderText">
+     <string>Your title name?</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>40</y>
+      <width>401</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_apply">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>80</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Apply</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_cancel">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>120</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Cancel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_add">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>180</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Add more Notes</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>60</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Welcome to</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>30</y>
+      <width>20</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <zorder>graphicsView</zorder>
+   <zorder>label</zorder>
+   <zorder>line_2</zorder>
+   <zorder>bt_save</zorder>
+   <zorder>bt_exit</zorder>
+   <zorder>textBrowser</zorder>
+   <zorder>bt_tool1</zorder>
+   <zorder>bt_tool2</zorder>
+   <zorder>textBrowser_2</zorder>
+   <zorder>bt_edit1</zorder>
+   <zorder>bt_edit2</zorder>
+   <zorder>line</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>lineEdit</zorder>
+   <zorder>bt_apply</zorder>
+   <zorder>bt_cancel</zorder>
+   <zorder>bt_add</zorder>
+   <zorder>label_5</zorder>
+   <zorder>line_3</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
