--- a/PTI/SPCK/GUI/AdminTool - note2.ui
+++ b/PTI/SPCK/GUI/AdminTool - note2.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Administrator Tools</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="bt_remove">
