--- a/PTI/SPCK/GUI/AdminTool - note2.ui
+++ b/PTI/SPCK/GUI/AdminTool - note2.ui
@@ -86,7 +86,7 @@ this note detail</string>
     </property>
     <property name="text">
      <string>Admin Tool
-  Version 1</string>
+    Note 2</string>
     </property>
    </widget>
   </widget>
