--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -222,7 +222,7 @@ p, li { white-space: pre-wrap; }
      <string>Title</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="le_name">
     <property name="geometry">
      <rect>
       <x>310</x>
