feat Update SPCK - 05/04/2024

--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Beta 4 Testing Only!</string>
+     <string> April Test Release</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
