--- a/PTI/SPCK/GUI/Setup2.ui
+++ b/PTI/SPCK/GUI/Setup2.ui
@@ -24,9 +24,9 @@
    <widget class="QCheckBox" name="chb_accept">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>260</y>
-      <width>251</width>
+      <x>160</x>
+      <y>270</y>
+      <width>221</width>
       <height>20</height>
      </rect>
     </property>
@@ -36,7 +36,7 @@
      </font>
     </property>
     <property name="text">
-     <string>I accept to this license terms of use</string>
+     <string>I accept to the license terms of use</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -115,8 +115,8 @@
    <widget class="QComboBox" name="cb_language">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>160</y>
+      <x>180</x>
+      <y>170</y>
       <width>141</width>
       <height>22</height>
      </rect>
@@ -145,8 +145,8 @@
    <widget class="QComboBox" name="cb_edition">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>220</y>
+      <x>180</x>
+      <y>230</y>
       <width>141</width>
       <height>22</height>
      </rect>
@@ -170,8 +170,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>130</y>
+      <x>180</x>
+      <y>140</y>
       <width>161</width>
       <height>21</height>
      </rect>
@@ -188,8 +188,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>190</y>
+      <x>180</x>
+      <y>200</y>
       <width>191</width>
       <height>21</height>
      </rect>
