--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>990</width>
+    <width>992</width>
     <height>665</height>
    </rect>
   </property>
@@ -272,7 +272,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>430</x>
+      <x>440</x>
       <y>80</y>
       <width>131</width>
       <height>21</height>
@@ -284,7 +284,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Beta 4 Testing Only!</string>
+     <string>April Test Release</string>
     </property>
    </widget>
   </widget>
