--- a/PTI/SPCK/GUI/dangky.ui
+++ b/PTI/SPCK/GUI/dangky.ui
@@ -984,7 +984,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>480</y>
+      <y>470</y>
       <width>251</width>
       <height>17</height>
      </rect>
@@ -1001,10 +1001,10 @@
    <widget class="QPushButton" name="bt_signup">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>510</y>
-      <width>91</width>
-      <height>31</height>
+      <x>360</x>
+      <y>500</y>
+      <width>111</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -1050,6 +1050,12 @@
      <font>
       <pointsize>9</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Already have an account</string>
