--- a/PTI/SPCK/GUI/editNote1.ui
+++ b/PTI/SPCK/GUI/editNote1.ui
@@ -59,6 +59,7 @@
     </property>
     <property name="font">
      <font>
+      <family>Consolas</family>
       <pointsize>15</pointsize>
      </font>
     </property>
