--- a/PTI/SPCK/GUI/editNote2.ui
+++ b/PTI/SPCK/GUI/editNote2.ui
@@ -74,6 +74,7 @@
     </property>
     <property name="font">
      <font>
+      <family>Consolas</family>
       <pointsize>15</pointsize>
      </font>
     </property>
