--- a/PTI/SPCK/GUI/setting.ui
+++ b/PTI/SPCK/GUI/setting.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>791</width>
-    <height>506</height>
+    <width>947</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>400</x>
       <y>40</y>
       <width>191</width>
       <height>51</height>
@@ -192,8 +192,8 @@
    <widget class="QPushButton" name="bt_save">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>430</y>
+      <x>440</x>
+      <y>490</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -213,7 +213,7 @@
       <x>500</x>
       <y>140</y>
       <width>16</width>
-      <height>261</height>
+      <height>331</height>
      </rect>
     </property>
     <property name="orientation">
@@ -223,7 +223,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>650</x>
       <y>120</y>
       <width>181</width>
       <height>71</height>
@@ -244,8 +244,8 @@
    <widget class="QPushButton" name="bt_reset">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>280</y>
+      <x>570</x>
+      <y>330</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -263,8 +263,8 @@
    <widget class="QPushButton" name="bt_delete">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>350</y>
+      <x>570</x>
+      <y>400</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -282,8 +282,8 @@ Notes pages</string>
    <widget class="QCheckBox" name="chb_name">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>180</y>
+      <x>580</x>
+      <y>210</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -306,8 +306,8 @@ Notes pages</string>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>240</y>
+      <x>580</x>
+      <y>290</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -327,8 +327,8 @@ Notes pages</string>
    <widget class="QCheckBox" name="chb_read">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>200</y>
+      <x>580</x>
+      <y>240</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -352,7 +352,7 @@ Notes pages</string>
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>250</y>
+      <y>260</y>
       <width>201</width>
       <height>31</height>
      </rect>
@@ -397,7 +397,7 @@ Notes pages</string>
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>310</y>
+      <y>320</y>
       <width>201</width>
       <height>31</height>
      </rect>
@@ -418,6 +418,295 @@ Notes pages</string>
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QFontComboBox" name="fontComboBox">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>270</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="currentText">
+     <string>Consolas</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>210</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Text formatting:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>240</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Font</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>310</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Size</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>750</x>
+      <y>340</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>8</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>9</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>10</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>11</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>12</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>13</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>14</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>15</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>16</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>17</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>18</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>19</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>20</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>21</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>22</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>23</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>24</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>25</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>26</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>27</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>28</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>29</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>30</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>31</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>32</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>33</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>34</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>35</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>36</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>37</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>38</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>39</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>40</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>41</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>42</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>43</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>44</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>45</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>46</string>
+     </property>
+    </item>
+   </widget>
+   <zorder>label_2</zorder>
+   <zorder>label_8</zorder>
    <zorder>label_7</zorder>
    <zorder>label</zorder>
    <zorder>label_4</zorder>
@@ -428,7 +717,6 @@ Notes pages</string>
    <zorder>cb_edition_2</zorder>
    <zorder>bt_save</zorder>
    <zorder>line</zorder>
-   <zorder>label_2</zorder>
    <zorder>bt_reset</zorder>
    <zorder>bt_delete</zorder>
    <zorder>chb_name</zorder>
@@ -436,6 +724,10 @@ Notes pages</string>
    <zorder>chb_read</zorder>
    <zorder>chb_enable</zorder>
    <zorder>chb_enable_2</zorder>
+   <zorder>fontComboBox</zorder>
+   <zorder>label_9</zorder>
+   <zorder>label_10</zorder>
+   <zorder>comboBox</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
