--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -20,15 +20,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>10</y>
+      <x>50</x>
+      <y>70</y>
       <width>401</width>
       <height>111</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>22</pointsize>
      </font>
     </property>
     <property name="text">
@@ -38,15 +38,15 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>30</y>
+      <x>160</x>
+      <y>90</y>
       <width>91</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
@@ -56,8 +56,8 @@
    <widget class="QPushButton" name="bt_edit1">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>560</y>
+      <x>270</x>
+      <y>530</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -74,8 +74,8 @@
    <widget class="QTextBrowser" name="textBrowser_2">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>350</y>
+      <x>530</x>
+      <y>320</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -94,8 +94,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>350</y>
+      <x>200</x>
+      <y>320</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -114,8 +114,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_edit2">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>560</y>
+      <x>590</x>
+      <y>530</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -133,7 +133,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>590</y>
+      <y>580</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -150,8 +150,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_add">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>280</y>
+      <x>670</x>
+      <y>200</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -168,8 +168,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>120</y>
+      <x>530</x>
+      <y>60</y>
       <width>401</width>
       <height>121</height>
      </rect>
@@ -181,8 +181,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_apply">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>160</y>
+      <x>830</x>
+      <y>100</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -194,8 +194,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bt_cancel">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>200</y>
+      <x>830</x>
+      <y>140</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -207,8 +207,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>130</y>
+      <x>710</x>
+      <y>70</y>
       <width>31</width>
       <height>21</height>
      </rect>
@@ -225,8 +225,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLineEdit" name="le_name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>180</y>
+      <x>550</x>
+      <y>120</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -238,24 +238,11 @@ p, li { white-space: pre-wrap; }
      <string>Your title name?</string>
     </property>
    </widget>
-   <widget class="Line" name="line">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>250</y>
-      <width>861</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
    <widget class="QPushButton" name="bt_save">
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>520</y>
+      <y>500</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -272,8 +259,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>80</y>
+      <x>210</x>
+      <y>140</y>
       <width>131</width>
       <height>21</height>
      </rect>
@@ -287,6 +274,63 @@ p, li { white-space: pre-wrap; }
      <string>April Test Release</string>
     </property>
    </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>30</y>
+      <width>20</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>460</y>
+      <width>181</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>470</y>
+      <width>20</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <zorder>line_2</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>bt_edit1</zorder>
+   <zorder>textBrowser_2</zorder>
+   <zorder>textBrowser</zorder>
+   <zorder>bt_edit2</zorder>
+   <zorder>bt_quit</zorder>
+   <zorder>bt_add</zorder>
+   <zorder>graphicsView</zorder>
+   <zorder>bt_apply</zorder>
+   <zorder>bt_cancel</zorder>
+   <zorder>label_4</zorder>
+   <zorder>le_name</zorder>
+   <zorder>bt_save</zorder>
+   <zorder>label_3</zorder>
+   <zorder>line</zorder>
+   <zorder>line_3</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
